@startuml

title __VUETASKS's Class Diagram__\n

  namespace Vue {
    namespace asks {
      class VueTasks.DisplayThread {
          {static} + REFRESH_DELAY : int
          ~ imBG : Image
          ~ imBigPoint : Image
          ~ imEmpty : Image
          ~ imGhost : Image
          ~ imHeart : Image
          ~ imPM : Image
          ~ imPoint : Image
          ~ imStrong : Image
          ~ imUntouchable : Image
          ~ imWall : Image
          - firstInstance : boolean
          - lifeTab : ImageView[]
          - running : AtomicBoolean
          - tab : ImageView[][]
          + DisplayThread()
          + call()
          + stopThread()
      }
    }
  }
  

  namespace Vue {
    namespace asks {
      class VueTasks.EndOfGameTask {
          {static} - LOSE_TEXT : String
          {static} - VICTORY_TEXT : String
          - running : AtomicBoolean
          + EndOfGameTask()
          + reset()
          + startRunning()
          + stopRunning()
          # call()
      }
    }
  }
  

  namespace Vue {
    namespace asks {
      class VueTasks.LivesTask {
          - running : AtomicBoolean
          + LivesTask()
          + setPacman()
          + stopRunning()
          # call()
      }
    }
  }
  

  VueTasks.DisplayThread -up-|> javafx.concurrent.Task
  VueTasks.DisplayThread o-- Modele.ModelGrid : modelGrid
  VueTasks.EndOfGameTask -up-|> javafx.concurrent.Task
  VueTasks.EndOfGameTask o-- Modele.ModelGrid : modelGrid
  VueTasks.LivesTask -up-|> javafx.concurrent.Task
  VueTasks.LivesTask o-- Modele.SimplePacMan : simplePacMan


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
